# majacd

./: AUTHORS  ChangeLog  Makefile.am  configure.ac  majacd.1  majacd.spec.in
src/: Makefile.am  device_ctl.c  device_ctl.h  main.c
src/gui/: Makefile.am  backend_ctl.c  backend_ctl.h  callbacks.c  callbacks.h  main.c  main_window.c  main_window.h  tray_icon.c  tray_icon.h
